--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
-  <title>JS Bin</title>
+  <title>Arrow Game</title>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
   <div class="title">Arrow Game</div>  
   
   <div class="button">
-    <button type="button" id="David" onclick="pickTopping()">Start Game.</button>
+    <button type="button" id="David" onclick="pickTopping()">Start Game</button>
   </div>
   
 <div id="week">
