delete all stuff

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<<<<<<< HEAD
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 	<title>Arrow Game</title>
 </head>
@@ -17,7 +16,6 @@
 
 </body>
 </html>
-=======
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -33,31 +31,31 @@
   </div>
   
 <div id="week">
-  <div class="day" id="Monday">
+  <div class="arrow" id="Monday">
     <div class="name">Monday</div>
     <div class="main" id="MondayMain">Kalua Pig</div>
     <div class="ampersand">&</div>
     <div class="side" id="MondaySide">Mac Salad</div>
   </div>
-  <div class="day" id="Tuesday">
+  <div class="arrow" id="Tuesday">
     <div class="name">Tuesday</div>
     <div class="main" id="TuesdayMain">Kalua Pig</div>
     <div class="ampersand">&</div>
     <div class="side" id="TuesdaySide">Mac Salad</div>
   </div>
-  <div class="day" id="Wednesday">
+  <div class="arrow" id="Wednesday">
     <div class="name">Wednesday</div>
     <div class="main" id="WednesdayMain">Kalua Pig</div>
     <div class="ampersand">&</div>
     <div class="side" id="WednesdaySide">Mac Salad</div>
   </div>
-  <div class="day" id="Thursday">
+  <div class="arrow" id="Thursday">
     <div class="name">Thursday</div>
     <div class="main" id="ThursdayMain">Kalua Pig</div>
     <div class="ampersand">&</div>
     <div class="side" id="ThursdaySide">Mac Salad</div>
   </div>
-  <div class="day" id="Friday">
+  <div class="arrow" id="Friday">
     <div class="name">Friday</div>
     <div class="main" id="FridayMain">Kalua Pig</div>
     <div class="ampersand">&</div>
@@ -70,4 +68,3 @@
 
 
 </html>
->>>>>>> origin/master
