--- a/index.html
+++ b/index.html
@@ -8,32 +8,14 @@
 
 	<div id="div1">LEFT</div>
 	<div id="div2"></div>
-<<<<<<< Updated upstream
-	<div id="div3"><img id="left" src="assets/leftarrow.png"></div>
-
-	<script type="text/javascript"></script>
-<<<<<<< Updated upstream
-
-	<div id="div3">
-	</div>
-
-
-
-=======
-	<div id="div3">
-	</div>
-
->>>>>>> Stashed changes
-=======
 	<div id="div3">
 
-	<img src="assets/leftarrow.png">
+	<img id="left" src="assets/leftarrow.png">
 
 	</div>
 
 	<script type="text/javascript"></script>
 
->>>>>>> Stashed changes
 </body>
 <link rel="stylesheet" type="text/js" href="js/index.js">
 </html>
