--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<title>Arrow Game</title>
+<title>Arrow Game</title>
+<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 
-	<div id="div1">LEFT</div>
-	<div id="div2"></div>
+	<div id="one" class="square1"></div>
+	<div id="two" class="square2"></div>
+	<div id="three" class="square3"></div>
+	<div id="four" class="square4"></div>
+	<div id="hi"></div>
 
-	<div id="div3"><img id="left" src="assets/leftarrow.png"></div>
+<div></div>
 
-	<script type="text/javascript"></script>
-
-	<div id="div3">
+	<div class="column"> 
+		<div id="div1">LEFT</div>
+		<div id="div2"></div>
+		<div id="div3"><img id="left" src="assets/leftarrow.png"></div>
+	</div>
+		
+	<div class="column"> 
+		<div id="div04">DOWN</div>
+		<div id="div05"></div>
+		<div id="div06"><img id="down" src="assets/downarrow.png"></div>
 	</div>
 
-
-
-
-	<div id="div3">
+	<div class="column"> 
+		<div id="div07">UP</div>
+		<div id="div08"></div>
+		<div id="div09"><img id="up" src="assets/uparrow.png"></div>
 	</div>
 
-
-	<div id="div3">
-
-	<img id="left" src="assets/leftarrow.png">
-
+	<div class="column"> 
+		<div id="div010">RIGHT</div>
+		<div id="div011"></div>
+		<div id="div012"><img id="right" src="assets/rightarrow.png"></div>
 	</div>
+	<div id="display"></div>
 
-	<script type="text/javascript"></script>
+	
 
+	<script type="text/javascript" src="js/index.js"></script>
 
+</script>
 </body>
-<link rel="stylesheet" type="text/js" href="js/index.js">
 </html>
+
